hphp/hack/test/typecheck/strict_switch/missing_null.php.exp
File "missing_null.php", line 6, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `null` (Typing[4019])
File "missing_null.php", line 7, characters 10-11:
Switching on `null` but using constant from `int` (Typing[4023])
  File "missing_null.php", line 5, characters 23-26:
  expecting `null` based on this
